--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,3 +2,13 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+#homecategories {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.MuiPaper-root.MuiCard-root.makeStyles-root-124.MuiPaper-outlined.MuiPaper-rounded {
+  margin-top: 4rem;
+  box-shadow: grey 0px -1px 7px 0px;
+}
