--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,3 +12,20 @@ body {
   margin-top: 4rem;
   box-shadow: grey 0px -1px 7px 0px;
 }
+
+#idealine {
+  display: flex;
+  justify-content: space-between;
+  border: gray solid 2px;
+  border-radius: 1rem;
+  padding: 0rem 1rem;
+  font-style: italic;
+  background-color: #3f51b5;
+  color: whitesmoke;
+}
+
+div#plannercard {
+  background-image: url("https://images-na.ssl-images-amazon.com/images/I/71V-ouaMRYL._AC_SL1500_.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
