--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,15 +16,17 @@ body {
   min-width: 275px;
 }
 
-#idealine {
-  /* display: flex;
-  justify-content: space-between;
-  border: gray solid 2px;
-  border-radius: 1rem;
-  padding: 0rem 1rem;
-  font-style: italic;
-  background-color: #3f51b5;
-  color: whitesmoke; */
+/* .experientinputs {
+  margin-top: 2rem;
+} */
+
+h2 {
+  text-align: center;
+}
+
+#experimentlogform {
+  width: 70%;
+  margin: 2rem auto;
 }
 
 div#plannercard {
