--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,6 +24,10 @@ h2 {
   text-align: center;
 }
 
+input.MuiInputBase-input.MuiInput-input {
+  width: 12vw;
+}
+
 #experimentlogform {
   width: 70%;
   margin: 2rem auto;
