--- a/client/src/App.css
+++ b/client/src/App.css
@@ -141,8 +141,9 @@ input.MuiInputBase-input.MuiInput-input {
 
 button.MuiButtonBase-root.MuiButton-root.MuiButton-outlined.daydiv.MuiButton-outlinedPrimary {
   margin: 1rem;
-  /* border: royalblue solid 2px; */
-  box-shadow: #222275d6 0px 0px 1rem;
+  border: royalblue solid 2px;
+  font-weight: 900;
+  /* box-shadow: #222275d6 0px 0px 1rem; */
 }
 
 #pg-viewer {
@@ -177,4 +178,38 @@ p.calenderDay {
 .photo-viewer-container {
   border: black solid 2px;
   height: 50vh !important;
+}
+
+.MuiInputBase-input,
+.MuiInput-root {
+  width: 40%;
+}
+
+p {
+  font-size: initial;
+  font-weight: 400;
+  text-align: left;
+  color: #555;
+}
+
+#prevexperimentcontainer {
+  width: 80%;
+  margin: auto;
+}
+
+.prevexperimentfield {
+  display: flex;
+  border: solid rgba(0, 0, 0, 0.075);
+  border-radius: 3px;
+  margin-top: 1rem;
+}
+
+.prevexperimentfield > h2 {
+  color: #66afe9;
+  padding: 1rem;
+  width: 20%;
+}
+.prevexperimentfield > p {
+  width: 80%;
+  color: #444;
 }
