--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,9 +29,9 @@ h2 {
   text-align: center;
 }
 
-input.MuiInputBase-input.MuiInput-input {
+/* input.MuiInputBase-input.MuiInput-input {
   width: 12vw;
-}
+} */
 
 #experimentlogform {
   width: 70%;
@@ -73,7 +73,18 @@ a {
 }
 
 input.MuiInputBase-input.MuiInput-input {
-  width: 70vw;
+  width: 100%;
+}
+
+form.loginlogoutform {
+  margin: auto;
+  width: 40%;
+  border: solid gray 1px;
+  padding: 3%;
+}
+
+.MuiFormControl-root {
+  width: 100%;
 }
 
 .MuiListItemText-root {
@@ -158,6 +169,12 @@ button.MuiButtonBase-root.MuiButton-root.MuiButton-outlined.daydiv.MuiButton-out
   /* box-shadow: #222275d6 0px 0px 1rem; */
 }
 
+.MuiButton-containedPrimary {
+  color: #fff;
+  background-color: #3f51b5;
+  margin-top: 2rem;
+}
+
 #pg-viewer {
   max-height: 100vh;
 }
@@ -188,10 +205,10 @@ p.calenderDay {
   height: 50vh !important;
 }
 
-.MuiInputBase-input,
+/* .MuiInputBase-input,
 .MuiInput-root {
   width: 100%;
-}
+} */
 
 p {
   font-size: initial;
